Yaptığınız değişikliğin açıklaması

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello, World İmran Beyza Parmaksız!</h1>
-    <p>MERHABAA</p>
+    <p>MERHABAA imran123</p>
 </body>
 </html>
